# oil-trading-bot

./: .gitignore  LICENSE  README.md  pyproject.toml
models/: rf_model.joblib
scripts/: run_backtest.py  train_model.py
src/: exceptions.py
src/oil_bot/: dto.py  exceptions.py
src/oil_bot/backtesting/: engine.py
src/oil_bot/execution/: interfaces.py  simulated.py
src/oil_bot/features/: engine.py
src/oil_bot/indicators/: atr.py  bollinger.py  interfaces.py  macd.py  moving_average.py  rsi.py
src/oil_bot/metrics/: calculator.py
src/oil_bot/ml/: feature_engineering.py  model_store.py  pipeline.py
src/oil_bot/nlp/: news_loader.py  sentiment.py
src/oil_bot/risk/: fixed_fraction.py  interfaces.py
src/oil_bot/services/: backtest_service.py  comparison_service.py  ml_service.py  nlp_service.py
src/oil_bot/strategies/: base.py  combined.py  interfaces.py  ma_crossover.py  ml_strategy.py  rsi_strategy.py  sentiment_strategy.py
src/oil_bot/utils/: logging.py
streamlit_app/: Home.py
streamlit_app/pages/: 1_Backtest.py  2_Comparison.py  3_ML_Lab.py  4_NLP.py
streamlit_app/state/: __init__.py
tests/integration/: test_backtest.py
tests/unit/: test_dto.py  test_indicators.py  test_metrics.py  test_ml.py  test_nlp.py  test_strategies.py
